--- a/templates/zeppelin-openshift.yaml
+++ b/templates/zeppelin-openshift.yaml
@@ -32,7 +32,13 @@ objects:
       deploymentconfig: ${APPLICATION_NAME}
     strategy:
       activeDeadlineSeconds: 21600
-      resources: {}
+      resources:
+        limits:
+          cpu: 1000m
+          memory: 3Gi
+        requests:
+          cpu: 500m
+          memory: 550Mi
       rollingParams:
         intervalSeconds: 1
         maxSurge: 25%
@@ -58,7 +64,13 @@ objects:
             protocol: TCP
           - containerPort: 42100
             protocol: TCP
-          resources: {}
+          resources: 
+            limits:
+              cpu: 1000m
+              memory: 3Gi
+            requests:
+              cpu: 500m
+              memory: 550Mi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
         dnsPolicy: ClusterFirst
@@ -161,7 +173,13 @@ objects:
         kind: ImageStreamTag
         name: ${APPLICATION_NAME}:latest
     postCommit: {}
-    resources: {}
+    resources:
+      limits:
+        cpu: 1000m
+        memory: 3Gi
+      requests:
+        cpu: 500m
+        memory: 550Mi
     runPolicy: Serial
 
     triggers:
