--- a/templates/oshinko-cluster.yaml
+++ b/templates/oshinko-cluster.yaml
@@ -65,6 +65,13 @@ items:
         spec:
           strategy:
             type: Rolling
+            resources:
+              limits:
+                cpu: "2"
+                memory: 6Gi
+              requests:
+                cpu: "1"
+                memory: 2Gi
           triggers:
             - type: ConfigChange
           replicas: 1
