--- a/strimzi/strimzi-consumer.yaml
+++ b/strimzi/strimzi-consumer.yaml
@@ -14,6 +14,13 @@ spec:
       containers:
       - name: kafka-consumer
         image: strimzici/hello-world-consumer:support-training
+        resources:
+          limits:
+            cpu: "2"
+            memory: 2Gi
+          requests:
+            cpu: "1"
+            memory: 1Gi
         env:
           - name: BOOTSTRAP_SERVERS
             value: my-cluster-kafka-bootstrap:9093
