updated image for producer and consumer

--- a/strimzi/strimzi-consumer.yaml
+++ b/strimzi/strimzi-consumer.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: kafka-consumer
-        image: strimzici/hello-world-consumer:support-training
+        image: strimzi/hello-world-producer:latest
         resources:
           limits:
             cpu: "2"
@@ -23,11 +23,11 @@ spec:
             memory: 1Gi
         env:
           - name: BOOTSTRAP_SERVERS
-            value: my-cluster-kafka-bootstrap:9093
+            value: my-cluster-kafka-bootstrap:9092
           - name: TOPIC
             value: my-topic
           - name: GROUP_ID
-            value: my-group
+            value: my-hello-world-consumer
           - name: LOG_LEVEL
             value: "INFO"
           - name: MESSAGE_COUNT
