--- a/templates/init.yaml
+++ b/templates/init.yaml
@@ -16,3 +16,13 @@ spec:
   - name: init-mydb 
     image: busybox
     command: ['sh', '-c', 'until nslookup mydb; do echo waiting for mydb; sleep 2; done;']
+    resources:
+       limits: 
+         cpu: "250m"
+         memory: "100Mi"
+      requests:
+        cpu: "250m"
+        memory: "100Mi"
+     terminationMessagePath: /dev/termination-log   
+      
+    
