--- a/templates/init.yaml
+++ b/templates/init.yaml
@@ -16,3 +16,11 @@ spec:
   - name: init-download
     image: ${APPLICATION_NAME}
     command: ['sh', '-c', 'curl -H "Accept: application/zip" https://github.com/gpe-mw-training/operational_intelligence/blob/master/thirdpartyjars/spark-streaming-kafka-0-10_2.11-2.0.2.jar -o /opt/zeppelin/local-repo/spark-streaming-kafka-0-10_2.11-2.0.2.jar']
+
+resources: 
+            limits:
+              cpu: 250m
+              memory: 1Gi
+            requests:
+              cpu: 250m
+              memory: 1Gi
