https://github.com/redhat-gpe/rhte_lab_06_operational_intelligence/issues/48

--- a/templates/oshinko-cluster.yaml
+++ b/templates/oshinko-cluster.yaml
@@ -483,6 +483,14 @@ items:
         - generic:
             secret: ${APPLICATION_NAME}
           type: Generic
+          resources:
+             limits: 
+               cpu: "1"
+               memory: "1Gi"
+             requests:
+               cpu: "1"
+               memory: "1Gi"
+                
     - apiVersion: v1
       kind: DeploymentConfig
       metadata:
