--- a/templates/oshinko-cluster.yaml
+++ b/templates/oshinko-cluster.yaml
@@ -458,8 +458,13 @@ items:
             kind: ImageStreamTag
             name: ${APPLICATION_NAME}:latest
             resources:
+              limits:
                 cpu : "1"
              memory : "1Gi"
+             requests:
+                cpu : "1"
+             memory : "1Gi"
+
         source:
           contextDir: ${CONTEXT_DIR}
           git:
