--- a/uber-realtime-spark-stream-analysis/pom.xml
+++ b/uber-realtime-spark-stream-analysis/pom.xml
@@ -2,16 +2,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>mapr</groupId>
-    <artifactId>mapr-sparkml-streaming-uber</artifactId>
+    <artifactId>uber-spark-stream-analysis</artifactId>
     <version>1.0</version>
-    <name>mapr-sparkml-streaming-uber</name>
+    <name>uber-spark-stream-analysis</name>
     <description></description>
     <inceptionYear>2016</inceptionYear>
 
 
     <properties>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <encoding>UTF-8</encoding>
 
         <scala.version>2.11.8</scala.version>
@@ -124,7 +124,7 @@
    
    
     <build>
-
+           <finalName>uber-spark-stream-analysis </finalName>
         <plugins>
             <plugin>
                 <groupId>org.scala-tools</groupId>						
