https://github.com/redhat-gpe/rhte_lab_06_operational_intelligence/issues/56

--- a/templates/spark-template.yaml
+++ b/templates/spark-template.yaml
@@ -75,7 +75,7 @@ objects:
       type: Rolling
     triggers:
       - type: ConfigChange
-    replicas: 3
+    replicas: 1
     selector:
       name: spark-worker
     template:
@@ -104,5 +104,6 @@ parameters:
 - name: WORKER_NAME
   description: worker name used as a selector
   generate: expression
-  from: "spark-worker-[a-z0-9]{4}"
+  value: "spark-worker"
+  // from: "spark-worker-[a-z0-9]{4}"
   required: true
